--- a/HardStone/Web.config
+++ b/HardStone/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-HardStone-20150411115316.mdf;Initial Catalog=aspnet-HardStone-20150411115316;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ObjectDatabase" connectionString="Server=tcp:zt8ytbwr1z.database.windows.net,1433;Database=ObjectDatabase;User ID=msimms@zt8ytbwr1z;Password={Octoberb@by};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
+      providerName="System.Data.SqlClient" />
+    <add name="ObjectDatabaseConnectionString" connectionString="Data Source=tcp:zt8ytbwr1z.database.windows.net,1433;Initial Catalog=ObjectDatabase;Integrated Security=False;Persist Security Info=True;User ID=msimms@zt8ytbwr1z;Password=Octoberb@by;Connect Timeout=30;Encrypt=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
