--- a/HardStone/Web.config
+++ b/HardStone/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -7,18 +7,23 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+    
+  <section name="ajaxControlToolkit" type="AjaxControlToolkit.AjaxControlToolkitConfigSection, AjaxControlToolkit" /></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-HardStone-20150411115316.mdf;Initial Catalog=aspnet-HardStone-20150411115316;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ObjectDatabase" connectionString="Server=tcp:zt8ytbwr1z.database.windows.net,1433;Database=ObjectDatabase;User ID=msimms@zt8ytbwr1z;Password={Octoberb@by};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"
-      providerName="System.Data.SqlClient" />
-    <add name="ObjectDatabaseConnectionString" connectionString="Data Source=tcp:zt8ytbwr1z.database.windows.net,1433;Initial Catalog=ObjectDatabase;Integrated Security=False;Persist Security Info=True;User ID=msimms@zt8ytbwr1z;Password=Octoberb@by;Connect Timeout=30;Encrypt=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-HardStone-20150411115316.mdf;Initial Catalog=aspnet-HardStone-20150411115316;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ObjectDatabase" connectionString="Server=tcp:zt8ytbwr1z.database.windows.net,1433;Database=ObjectDatabase;User ID=msimms@zt8ytbwr1z;Password={Octoberb@by};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="ObjectDatabaseConnectionString" connectionString="Data Source=tcp:zt8ytbwr1z.database.windows.net,1433;Initial Catalog=ObjectDatabase;Integrated Security=False;Persist Security Info=True;User ID=msimms@zt8ytbwr1z;Password=Octoberb@by;Connect Timeout=30;Encrypt=True" providerName="System.Data.SqlClient" />
+    <add name="HardStoA2bZzPFS7ConnectionString" connectionString="Data Source=zt8ytbwr1z.database.windows.net,1433;Initial Catalog=HardStoA2bZzPFS7;Persist Security Info=True;User ID=msimms;Password=ak19374qp!!!" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.1" />
+    <compilation debug="true" targetFramework="4.5.1">
+      <assemblies>
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+        <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.5.1" />
     <pages>
       <namespaces>
@@ -27,12 +32,13 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit"/>
       </controls>
     </pages>
     <membership>
       <providers>
         <!--
-	      ASP.NET Membership is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
+        ASP.NET Membership is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
         -->
         <clear />
       </providers>
@@ -40,14 +46,14 @@
     <profile>
       <providers>
         <!--
-	      ASP.NET Membership Profile is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
+        ASP.NET Membership Profile is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
         -->
         <clear />
       </providers>
     </profile>
     <roleManager>
       <!--
-	        ASP.NET Membership Role is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
+          ASP.NET Membership Role is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
         -->
       <providers>
         <clear />
@@ -100,6 +106,10 @@
         <assemblyIdentity name="Microsoft.Owin.Security" culture="neutral" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AjaxControlToolkit" publicKeyToken="28f01b0e84b6d53e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.10301.0" newVersion="1.0.10301.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -112,4 +122,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+  
+<ajaxControlToolkit htmlSanitizer="AjaxControlToolkit.HtmlEditor.Sanitizer.DefaultHtmlSanitizer, AjaxControlToolkit.HtmlEditor.Sanitizer" /></configuration>
