--- a/HardStone/Bundle.config
+++ b/HardStone/Bundle.config
@@ -3,5 +3,6 @@
   <styleBundle path="~/Content/css">
     <include path="~/Content/bootstrap-theme-robo.css" />
     <include path="~/Content/Site.css" />
+    <include path="~/Content/modalStyle2.css"/>
   </styleBundle>
 </bundles>
