--- a/HardStone/Web.config
+++ b/HardStone/Web.config
@@ -33,6 +33,7 @@
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit"/>
+        <add tagPrefix="enso" src="~/UserControls/ConfirmBox.ascx" tagName="ConfirmBox"  />
       </controls>
     </pages>
     <membership>
